--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,47 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #474747;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.18);
+  z-index: 1;
 }
 
-.App-link {
-  color: #61dafb;
+.App-header h2{
+  margin-bottom: 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-header h1{
+  margin-top: 0;
+}
+
+.light-text {
+  font-weight: 300;
+}
+
+#game-containers {
+  background-color: #333333;
+  height: 100%;
+}
+
+.App-footer {
+  background-color: #333333;
+  color: #626262;
+  font-style: italic;
+  font-size: 30px;
+  padding: 5px 0;
+}
+
+.App-footer p {
+  margin: 5px 0;
+}
+
+#trademarks {
+  font-size: 15px;
 }
