Added some padding

--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,8 @@
 #game-containers {
   background-color: #333333;
   height: 100%;
+  padding: 20px 0;
 }
-
 .App-footer {
   background-color: #333333;
   color: #626262;
