--- a/src/App.scss
+++ b/src/App.scss
@@ -30,7 +30,11 @@
   background-color: #333333;
   height: 100%;
   padding: 20px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
+
 .App-footer {
   background-color: #333333;
   color: #626262;
