--- a/src/App.scss
+++ b/src/App.scss
@@ -13,13 +13,14 @@
   box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.18);
   z-index: 1;
 }
-
-.App-header h2{
-  margin-bottom: 0;
-}
-
-.App-header h1{
-  margin-top: 0;
+.App-header {
+  h2{
+    margin-bottom: 0;
+  }
+  
+  h1{
+    margin-top: 0;
+  }
 }
 
 .light-text {
@@ -42,18 +43,20 @@
   font-size: 30px;
   padding: 5px 0;
 }
-
-.App-footer p {
-  margin: 5px 0;
+.App-footer {
+  p {
+    margin: 5px 0;
+  }
+  
+  a {
+    color: #626262;
+  }
+  
+  a:hover {
+    color: #7e7e7e;
+  }
 }
 
-.App-footer a {
-  color: #626262;
-}
-
-.App-footer a:hover {
-  color: #7e7e7e;
-}
 
 #trademarks {
   font-size: 15px;
