Fixed font size

--- a/src/components/GameContainer/GameContainer.scss
+++ b/src/components/GameContainer/GameContainer.scss
@@ -102,6 +102,10 @@
 		text-align: left;
 		min-width: 203px;
 		max-width: 203px;
+
+		h2 {
+			font-size: 25px;
+		}
 	}
 
 	.availibility-timer * {
