--- a/src/components/TimerBox/TimerBox.scss
+++ b/src/components/TimerBox/TimerBox.scss
@@ -8,10 +8,10 @@
 	color: white;
 	font-weight: 600;
 	font-size: 77px;
-	height: 90px;
 }
 
 .timer-box-label {
 	color: #A6A6A6;
 	font-size: 20px;
+	margin-top: -10px;
 }
