--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,7 +2,7 @@
 @import 'global';
 
 .App {
-  text-align: center;
+  background-color: $epicDarkGrey;
 
   // Header
   &-header{
@@ -15,6 +15,7 @@
     color: white;
     box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.18);
     z-index: 1;
+    margin-bottom: 1em;
     h1{
       margin-top: 0;
     }
@@ -23,9 +24,15 @@
     }
   }
 
+  .section-header {
+    text-align: left;
+    color: #fff;
+    font-size: 2em;
+    margin-left: 3em;
+  }
+
   // Content
-  #game-containers {
-    background-color: $epicDarkGrey;
+  .game-containers {
     height: 100%;
     padding: 20px 0;
     display: flex;
@@ -36,6 +43,7 @@
   // Footer
   &-footer{
     background-color: $epicDarkGrey;
+    text-align: center;
     color: #626262;
     font-style: italic;
     font-size: 30px;
